# Audifon

./: .flutter-plugins  .flutter-plugins-dependencies  .gitattributes  .gitignore  AUDITORIA_PIPELINE_DSP.md  CAMBIOS_NR_PROFESIONAL.md  CAMBIOS_SMART_AUTO_V2.md  DOCUMENTATION.md  PLAN_FIX_MATRACA_NR.md  RESUMEN_AUDITORIA_SMART.md  SESION.md  avances.md  build_apk_mvdr_fix.bat  compilar_auditory_fix.bat  compilar_auditory_fix2.bat  compile_denoiser_toggle.bat  correcciones.md  install_apk_mvdr_fix.bat  obstaculos.md  pubspec.yaml  push.md  push_log.txt  ruidolimpio.md  test_frequencies.html
.dart_tool/: package_config.json  package_graph.json
.dart_tool/flutter_build/: dart_plugin_registrant.dart
.github/workflows/: build-apk-with-code.yml  build-apk.yml  build-dfn3.yml  ci-core.yml  dartdoc-check.yml  deploy-simulator.yml  dsp-quality.yml  property-tests.yml  regression-tests.yml  release-gate.yml
ai/: README.md  config.js  index.js  package.json
ai/chatbot/: index.js
ai/diagnostics/: index.js
ai/environment-ml/: index.js
ai/fitting-assistant/: index.js
ai/knowledge-base/: build-index.js  knowledge-content.json  knowledge-index.json
ai/rag/: index.js
ai/reports/: index.js
android/: .gitignore  KEYSTORE_GUIDE.md  gradle.properties  key.properties.example  local.properties
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  adaptive_feedback_canceller.h  artifact_monitor.h  audio_engine.cpp  audio_engine.h  auditory_model.h  check_compile.bat  denoiser_artifact_log.h  denoiser_selector.cpp  denoiser_selector.h  dfn3_adapter.h  dfn3_denoiser.cpp  dfn3_denoiser.h  dfn3_onnx_adapter.h  dfn3_onnx_denoiser.cpp  dfn3_onnx_denoiser.h  diagnostic_recorder.cpp  diagnostic_recorder.h  dpdfnet_denoiser.cpp  dpdfnet_denoiser.h  dsp_pipeline.cpp  dsp_pipeline.h  dtln_denoiser.cpp  dtln_denoiser.h  environment_classifier.cpp  environment_classifier.h  equalizer.cpp  equalizer.h  expander.h  feedback_suppressor.h  gain_smoother.h  gtcrn_adapter.h  i_denoiser_engine.h  latency_loopback_tester.cpp  latency_loopback_tester.h  mpo_limiter.cpp  mpo_limiter.h  mvdr_beamformer.h  native_bridge.cpp  noise_reduction.cpp  (+15 more)
android/app/src/main/cpp/_legacy/: README.md  rnnoise_nr.cpp
android/app/src/main/cpp/_legacy/rnnoise_stub/: _kiss_fft_guts.h  arch.h  celt_lpc.c  celt_lpc.h  denoise.c  freq.h  opus_types.h  pitch.c  pitch.h  rnn.c  rnnoise.h
android/app/src/main/cpp/calibration_spectrum/: fft_engine.cpp  fft_engine.h  peak_detector.cpp  peak_detector.h  snr_calculator.h  thd_calculator.cpp  thd_calculator.h  tone_analyzer.cpp  tone_analyzer.h  tone_types.h
android/app/src/main/cpp/calibration_spectrum/tests/: .gitignore  run_tests.bat  run_wav_tests.bat  test_calibration_spectrum.cpp  test_wav_validation.cpp  wav_io.h
android/app/src/main/cpp/dfn3_rust/: Cargo.toml  README.md  build_android.sh
android/app/src/main/cpp/dfn3_rust/.cargo/: config.toml
android/app/src/main/cpp/dfn3_rust/include/: dfn3_api.h
android/app/src/main/cpp/dfn3_rust/src/: lib.rs
android/app/src/main/cpp/dnn_denoiser/: MIGRATION_NOTES.md  README.md  dnn_denoiser.cpp  dnn_denoiser.h  dnn_denoiser_sherpa.cpp  dnn_denoiser_sync.cpp  test_dnn_denoiser_dual.cpp
android/app/src/main/cpp/dnn_denoiser/pytorch_lite/: README.md
android/app/src/main/cpp/dnn_denoiser/pytorch_lite/caffe2/core/: macros.h
android/app/src/main/cpp/rnnoise/: common.h  kiss_fft.c  kiss_fft.h  rnn.h  rnn_data.h  tansig_table.h
android/app/src/main/cpp/smart_scene/: noise_profile.cpp  noise_profile.h  scene_analyzer.cpp  scene_analyzer.h  scene_policy.h  scene_types.h  spectral_features.cpp  spectral_features.h  vad_detector.cpp  vad_detector.h
android/app/src/main/cpp/smart_scene/tests/: .gitignore  _klattlog.txt  _vadlog.txt  klatt_voice.cpp  klatt_voice.h  run_klatt.bat  run_tests.bat  test_klatt_pipeline.cpp  test_noise_scale.cpp  test_scene_convergence.cpp  test_vad.cpp
android/app/src/main/cpp/tests/: CMakeLists.txt  artifact_monitor_test.cpp  compat_defaults_test.cpp  dereverb_ab_test.cpp  diagnostic_recorder_p2_test.cpp  diagnostic_recorder_p3_test.cpp  diagnostic_recorder_p4_test.cpp  diagnostic_recorder_p8_test.cpp  diagnostic_recorder_pbt_test.cpp  expander_test.cpp  mpo_invariant_test.cpp  run_mvdr_tuning_tests.bat  test_environment_classifier.cpp
assets/simulator/: app.js  calibration-ui.js  dsp-config-export.js  dsp-engine-browser.js  dsp-worklet-processor.js  index.html  level-meter.js  realtime-module.js  realtime-recorder.js  styles.css
docs/: AuditoryModel_Sistema_Auditivo_Humano.md  LARGE_FILES.md  ruido-profundo.md  ruido.md  smart-scene-diagnostico-chasquido.md
docs/ci/: release-gate-howto.md  release-gates.md
docs/investigacion/: AUDITORIA_SMART_SCENE.md  PLAN_SMART_AUTO_MEJORADO.md
docs/specs/: dual-mic-mvdr-beamforming.md
hermes-server-upgrade/: README.md  server-patch.js
integration_test/: e2e_integration_test.dart
investigaciones/: calibracion-biologica-parametros-tecnicos.md
lib/: main.dart  main_with_code.dart
lib/auth/: auth_screen.dart  auth_service.dart  blocked_by_code_screen.dart  license_expired_screen.dart  update_required_screen.dart
lib/bundle_export/: bundle_exporter.dart
lib/calibration_spectrum/: acceptance_criteria.dart  calibration_report_json.dart  calibration_verdict_reapply.dart  device_calibration.dart  iso17025_calibration.dart  iso_targets.dart  noise_floor_meter.dart  tone_emitter.dart  tone_method_channel.dart  tone_snapshot.dart  tone_test_result.dart  validator_orchestrator.dart
lib/core/: diagnostic_metadata.dart
lib/data/: hive_initializer.dart
lib/dnn_denoiser/: dnn_denoiser_controller.dart
lib/domain/: cin_module.dart  gain_prescriber.dart  gain_prescriber_nl3.dart  mhl_module.dart  scene_prescription_controller.dart
lib/scene/: scene_class.dart  (+9 more)
scripts/: generate_eval_fixtures.py  setup.sh  sync_to_usuario.bat
sim_mvdr_output/: SIMULACION_REGISTRO.json  SIMULACION_REGISTRO.md
tool/: check_dartdoc.dart  release_gate.dart
tools/: export_gtcrn_dual_core.py  export_gtcrn_script.py
(+425 files in other folders)
