[package]
name = "dfn3_android"
version = "0.1.0"
edition = "2021"
description = "DeepFilterNet3 speech enhancement via tract, exposed as C FFI for Android JNI"

[lib]
name = "dfn3"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# tract core + ONNX loader (pulsed model support for streaming)
tract-onnx = "0.21"
tract-core = "0.21"
tract-hir = "0.21"

# DeepFilterNet's DSP utilities (STFT/iSTFT, ERB filterbank, deep filtering)
# We use the df crate from the upstream DeepFilterNet project.
df = { git = "https://github.com/Rikorose/DeepFilterNet.git", branch = "main" }

# Logging via android logcat
android_logger = "0.14"
log = "0.4"

# For safe FFI pointer management
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
