[package]
name = "dfn3_android"
version = "0.1.0"
edition = "2021"
description = "DeepFilterNet3 speech enhancement via tract, exposed as C FFI for Android JNI"

[lib]
name = "dfn3"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# DeepFilterNet crate — includes DfTract, DfParams, RuntimeParams, DFState,
# and re-exports tract internally. This is the ONLY dep needed for the full
# DFN3 inference pipeline.
df = { git = "https://github.com/Rikorose/DeepFilterNet.git", branch = "main", package = "deep_filter" }

# Logging via android logcat
android_logger = "0.14"
log = "0.4"

# For safe FFI pointer management
once_cell = "1.19"

# ndarray for ArrayView2 construction
ndarray = "0.15"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
