[package]
name = "dfn3_android"
version = "0.1.0"
edition = "2021"
description = "DeepFilterNet3 speech enhancement via tract, exposed as C FFI for Android JNI"

[lib]
name = "dfn3"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# DeepFilterNet's DSP utilities (STFT/iSTFT, ERB filterbank, deep filtering)
# Only the base crate — no "tract" feature (it has internal incompatibilities with tract 0.21.17)
deep_filter = { git = "https://github.com/Rikorose/DeepFilterNet.git", rev = "d375b2d8309e0935d165700c91da9de862a99c31" }

# tract core + ONNX loader (pulsed model support for streaming)
tract-onnx = "0.21"
tract-core = "0.21"
tract-hir = "0.21"

# ndarray for ArrayView2 / ArrayViewMut2
ndarray = "0.15"

# Complex number type
num-complex = "0.4"

# Logging via android logcat
android_logger = "0.14"
log = "0.4"

# For safe FFI pointer management
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
